// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should render different variants 1`] = `ReactWrapper {}`;

exports[`Button should render different variants 2`] = `
<NextUI - Button
  animated={true}
  auto={false}
  autoFocus={false}
  bordered={false}
  className=""
  disabled={false}
  ghost={false}
  ripple={true}
  type="button"
>
  button
</NextUI - Button>
`;

exports[`Button should render empty button correctly 1`] = `
<NextUI - Button
  animated={true}
  auto={false}
  autoFocus={false}
  bordered={false}
  className=""
  disabled={false}
  ghost={false}
  ripple={true}
  type="button"
/>
`;
